added update, delete, error-handling, and validation
