# controllers/owner.js
@@ -1,14 +1,14 @@
 const Owner = require("../models/Owner");
 
 const createOwner = async (req, res) => {
-    if (!req.body._id || !req.body.firstName || !req.body.lastName || !req.body.phone || !req.body.address){
+  //#swagger.summary = Use to register new owner
+    if (!req.body.firstName || !req.body.lastName || !req.body.phone || !req.body.address){
         res.status(400).send({message: 'Please make sure to fill-up all required data!'});
         return;
     }
 
     try{
     const owner = await Owner.create({
-        "_id": req.body._id,
         "firstName": req.body.firstName,
         "lastName": req.body.lastName,
         "phone": req.body.phone,
@@ -17,7 +17,6 @@ const createOwner = async (req, res) => {
         "city": req.body.city,
         "zip": req.body.zip
     });
-
     res.status(201).json({'message': `New owner was successfully created!`})
     }catch(err){
         res.status(500).json({'message': err.message})
@@ -25,6 +24,7 @@ const createOwner = async (req, res) => {
 };
 
 const getOwners = (req, res) => {
+  //#swagger.summary = Use to request all owners
     Owner.find({})
       .then((data) => {
         res.send(data);
@@ -37,10 +37,16 @@ const getOwners = (req, res) => {
   };
   
 const getOwner = (req, res) => {
+  //#swagger.summary = Use to request specific owner by DB ID
     const id = req.params._id;
-    Owner.find({ _id: id })
+    Owner.findById({ _id: id })
       .then((data) => {
-        res.send(data);
+        if(!data){
+          res.status(404).send({message: `Invalid ID given`})
+        }
+        else{
+          res.send(data);
+        }
       })
       .catch((err) => {
         res.status(500).send({
@@ -49,7 +55,34 @@ const getOwner = (req, res) => {
       });
   };
 
-module.exports = {createOwner, getOwners, getOwner};
+const updateOwner = (req, res) => {
+  //#swagger.summary = Use to update specific owner info by DB ID
+    const id = req.params._id;
+      const {firstName, lastName, phone, email, address, city, zip} = req.body;
+      const updatedOwner = Owner.findByIdAndUpdate({_id: id},{firstName, lastName, phone, email, address, city, zip})
+      .then(data => {
+        if(!data){
+          res.status(404).send({message: `Invalid ID given`})
+        }else{
+          res.send({'message': `Owner #${id} was successfully updated!`})
+      }}).catch(err =>{
+        res.status(500).send({message: err.message || 'An error occurred while deleting the owner.'})
+})};
+  
+const deleteOwner = (req, res) => {
+  //#swagger.summary = Use to delete specific owner by DB ID
+    const id = req.params._id;
+      const result = Owner.findByIdAndDelete({_id:id})
+      .then(data => {
+        if(!data){
+          res.status(404).send({message: `Invalid ID given`})
+        }else{
+          res.send({'message': `Owner #${id} was successfully deleted!`})
+      }}).catch(err =>{
+        res.status(500).send({message: err.message || 'An error occurred while deleting the owner.'})
+      })}
+
+module.exports = {getOwners, getOwner, createOwner, updateOwner, deleteOwner};
 
 
 
