# controllers/pet.js
@@ -1,14 +1,15 @@
 const Pet = require("../models/Pet");
 
 const createPet = async (req, res) => {
-    if (!req.body._id || !req.body.name || !req.body.age || !req.body.petType || !req.body.gender || !req.body.feedingPattern || !req.body.boardingDuration){
+  //#swagger.summary = Use to register a new pet
+    if (!req.body.ownerKey || !req.body.name || !req.body.age || !req.body.petType || !req.body.gender || !req.body.feedingPattern || !req.body.boardingDuration){
         res.status(400).send({message: 'Please make sure to fill-up required data!'});
         return;
     }
 
     try{
         const pet = await Pet.create({
-            "_id": req.body._id,
+            "ownerKey": req.body.ownerKey,
             "name": req.body.name,
             "age": req.body.age,
             "petType": req.body.petType,
@@ -25,6 +26,7 @@ const createPet = async (req, res) => {
 };
 
 const getPets = (req, res) => {
+  //#swagger.summary = Use to request all pets
     Pet.find({})
       .then((data) => {
         res.send(data);
@@ -37,10 +39,15 @@ const getPets = (req, res) => {
   };
   
 const getPet = (req, res) => {
+  //#swagger.summary = Use to request specific pet by DB ID
     const id = req.params._id;
-    Pet.find({ _id: id })
+    Pet.findById({ _id: id })
       .then((data) => {
+        if(!data){
+          res.status(404).send({message: `Invalid ID given`})
+        }else{
         res.send(data);
+        }
       })
       .catch((err) => {
         res.status(500).send({
@@ -49,7 +56,34 @@ const getPet = (req, res) => {
       });
   };
 
-module.exports = {createPet, getPets, getPet};
+const updatePet = (req, res) => {
+  //#swagger.summary = Use to update specific pet info by DB ID
+  const id = req.params._id;
+    const {ownerKey,name, age, petType, gender, feedingPattern, medicationPattern, boardingDuration} = req.body;
+    const updatedPet = Pet.findByIdAndUpdate({_id: id},{ownerKey, name, age, petType, gender, feedingPattern, medicationPattern, boardingDuration})
+    .then(data => {
+      if(!data){
+        res.status(404).send({message: `Invalid ID given`})
+      }else{
+        res.send({'message': `Pet #${id} was successfully updated!`})
+    }}).catch(err =>{
+      res.status(500).send({message: err.message || 'An error occurred while deleting the pet'})
+    })};
+
+const deletePet = (req, res) => {
+  //#swagger.summary = Use to delete specific pet by DB ID
+  const id = req.params._id;
+    const result = Pet.findByIdAndDelete({_id:id})
+    .then(data => {
+      if(!data){
+        res.status(404).send({message: `Invalid ID given`})
+      }else{
+        res.send({'message': `Pet was successfully deleted!`})
+    }}).catch(err =>{
+      res.status(500).send({message: err.message || 'An error occurred while deleting the pet'})
+    })}
+
+module.exports = {getPets, getPet, createPet, updatePet, deletePet};
 
 
 
